# ShaderPixel

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Dependency.cmake  README.md  tmp.cpp
shader/: basic.vs  mandelbox.fs  mandelbulb.fs  simple.fs  test.fs  test.vs  texturetest.fs  transluscent.fs
src/: buffer.cpp  buffer.h  common.cpp  common.h  context.cpp  context.h  image.cpp  image.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h  vertexLayout.cpp  vertexLayout.h
